# loan-scoring-model

./: .gitattributes  .gitignore  Dockerfile  Dockerfile.api  Dockerfile.webapp  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: docker-image.yml  python-app.yml
data/: application_test_20cols.parquet  application_train_test_20_cols.parquet
models/: xgboost_20cols.pkl
src/: main.py
src/api/: data_cleaner.py  main.py  model.py  schemas.py
src/dashboard/: app.py
src/dashboard/pages/: analytics.py  demo.py
src/mlops_part2/: api.py  data_cleaner.py
src/mlops_part2/tests/: test_api.py
src/tests/: test_api.py
src/utils/: component.py  data.py
src/webapp/: app.py  plotly-cloud.toml
src/webapp/pages/: analytics.py  demo.py
