[project]
name = "loan-scoring-model"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dash[cloud]>=3.3.0",
    "dash-ag-grid>=32.3.4",
    "dash-mantine-components>=2.4.1",
    "dotenv>=0.9.9",
    "fastapi>=0.128.0",
    "httpx>=0.28.1",
    "ipykernel>=7.1.0",
    "logtail-python>=0.3.4",
    "matplotlib>=3.10.8",
    "pandas>=2.3.3",
    "parquet>=1.3.1",
    "plotly>=6.5.2",
    "pytest>=9.0.2",
    "requests>=2.32.5",
    "streamlit>=1.52.2",
    "uvicorn>=0.40.0",
    "xgboost>=3.1.3",
    "dash-iconify>=0.1.2",
    "evidently>=0.6.0",
    "cachetools>=6.2.4",
]

[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]
